# doit

./: .env.example  .gitignore  .jscpd.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOGS.md  Cargo.toml  FORK.md  README.md  VERSION  clippy.toml
.config/: nextest.toml
.devcontainer/: README.md  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-observability.yml  error-to-issue.yml  no-telemetry-gate.yml  release.yml
.grok/agents/: explorer.md  intake.md  oracle.md  orchestrator.md  worker.md
.grok/hooks/: guided-dangerous-shell.json
.opencode/: viz-skin.json
.opencode/skills/extension-worker/: SKILL.md
.opencode/skills/harness-docs-worker/: SKILL.md
.opencode/skills/rust-fork-worker/: SKILL.md
code-analysis/: index.md  system-prompt-assembly.md
crates/codegen/doit/: Cargo.toml  build.rs
crates/codegen/doit/src/: main.rs
crates/codegen/xai-grok-agent/src/: builder.rs  config.rs  discovery.rs
crates/codegen/xai-grok-agent/templates/: apply_patch_prompt.md  prompt.md  subagent_prompt.md
crates/codegen/xai-grok-config-types/src/: lib.rs
crates/codegen/xai-grok-config/src/: lib.rs  paths.rs
crates/codegen/xai-grok-pager/: Cargo.toml  build.rs
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager-minimal/src/: auth.rs  live.rs  welcome.rs
crates/codegen/xai-grok-pager-pty-harness/src/: env.rs
crates/codegen/xai-grok-pager/src/: lib.rs  role_accent.rs
crates/codegen/xai-grok-pager/tests/: settings_e2e.rs
crates/codegen/xai-grok-sandbox/src/: lib.rs  profiles.rs
crates/codegen/xai-grok-sandbox/tests/: deny_paths_e2e.rs
crates/codegen/xai-grok-shell/: Cargo.toml
crates/codegen/xai-grok-shell/src/: builtin.rs  claude_import.rs
crates/codegen/xai-grok-shell/tests/: byok_auth_skip_oauth.rs  role_switch_policy.rs
crates/codegen/xai-grok-version/: Cargo.toml  build.rs
do-harness/: README.md  config.agents.toml  config.defaults.toml  config.models.yaml  config.permissions.yaml  config.roles.toml  config.skills.yaml  config.toolset.toml
do-harness/agents/: explorer.md  intake.md  oracle.md  orchestrator.md  worker.md
do-harness/codegraph/: mcp.toml.example  mcp_server.py
do-harness/fixtures/continuation/: multi-step-thrash.json
do-harness/hooks/: README.md  continuation-nudge.json  guided-dangerous-shell.json  guided-env-expose.json  guided-path-policy.json
do-harness/prompts/: README.md  gates.md  l0-general.md  l0-kernel.md  l0-system.md  placeholders.md
do-harness/prompts/agents/: explore.md  intake.md  orchestrator.md  worker.md
do-harness/prompts/roles/: explorer.md  intake.md  oracle.md  orchestrator.md  worker.md
do-harness/scripts/: apply-models.py  apply-models.sh  apply-role-contracts.py  apply-role-contracts.sh  sync-l0-general.sh  sync-user-config.py  sync-user-config.sh  verify-codegraph.sh  verify-continuation.sh  verify-discovery.sh  verify-gates.sh  verify-hashline.sh  verify-install.sh  verify-model-resolve.sh  verify-progressive-skills.sh  verify-role-contracts.sh  verify-role-lock.sh  verify-role-permissions.sh  verify-roster.sh
docs/: agents-and-prompts.md  architecture.md  backlog-m1-m3.md  capability-map.md  codegraph.md  continuation.md  current-status.md  dependency-policy.md  feature-flags.md  future-plan.md  hashline.md  index.md  limitations.md  milestone-ship-discipline.md  models-and-config.md  patch-matrix.md  progressive-skills.md  prompt-system.md  related-projects.md  role-permissions.md  tech-debt.md  testing.md  workspace.md
docs/grok-build/: README.md  extension-seams.md  hard-limits.md  native-tools.md  overview.md  patterns.md
docs/runbooks/: README.md  alerting.md  deploy-impact.md  incident-response.md
npm/doit/: .gitignore  README.md  package.json
npm/doit-darwin-arm64/: package.json
npm/doit-darwin-x64/: package.json
npm/doit-linux-arm64/: package.json
npm/doit-linux-x64/: package.json
npm/doit-win32-arm64/: package.json
npm/doit-win32-x64/: package.json
npm/doit/scripts/: assemble-platform-packages.js  publish.js
plans/reports/: 2026-07-16-control-plane-bootstrap.md  f-ext-003-discovery-verify.md
scripts/: check-dead-feature-flags.sh  check-duplicate-code.sh  check-exfil-surfaces.sh  check-large-files.sh  check-tech-debt.sh  check-unused-deps.sh  exfil-surfaces.allowlist  generate-docs.sh  git-pre-commit.sh  install-local-bin.sh  shell-aliases.sh  validate-agents-md.sh
(+138 files in other folders)
