[package]
name = "doit"
# Product package semver — keep lockstep with repo-root VERSION (product, not upstream).
version = "0.0.2"
edition.workspace = true
license = "Apache-2.0"
authors = ["xAI"]
default-run = "doit"
description = "doit coding-agent harness (Grok Build fork)"
repository = "https://github.com/dathtd119/doit"
homepage = "https://github.com/dathtd119/doit"
readme = "../../../README.md"
# Not published to crates.io (path/git workspace + monorepo graph). Install via
# GitHub Releases / cargo-binstall, or cargo install --git / --path.
publish = false

# Product composition-root binary (install package `doit`, binary `doit`).
# Links the pager library and optional `xai-grok-pager-minimal` render mode:
# `minimal` depends on `xai-grok-pager`, so the pager library cannot depend
# back on it (cargo cycle). The binary installs minimal-mode IoC hooks at startup.
[[bin]]
name = "doit"
path = "src/main.rs"

# cargo-binstall: prebuilts from GitHub Releases on dathtd119/doit (VAL-PKG-003).
# Archive names must match .github/workflows/release.yml packaging:
#   doit-{version}-{target}.tar.gz  (Unix)
#   doit-{version}-{target}.zip     (Windows)
# Tag form: v{version} (e.g. v0.0.1).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
# The pager library (all application logic + the public API main.rs drives).
xai-grok-pager = { path = "../xai-grok-pager" }
# Optional scrollback-native render mode, wired in via the fn-pointer seam.
xai-grok-pager-minimal = { path = "../xai-grok-pager-minimal" }

# Agent runtime + leader/stdio/headless entry points.
xai-grok-shell = { workspace = true }
xai-grok-update = { path = "../xai-grok-update" }
xai-grok-version = { workspace = true }
xai-grok-telemetry = { workspace = true }
xai-grok-workspace = { workspace = true }
xai-crash-handler = { path = "../xai-crash-handler" }
xai-acp-lib = { workspace = true }

# Async runtime + misc.
tokio = { workspace = true, features = [
    "sync",
    "rt",
    "macros",
    "rt-multi-thread",
    "signal",
    "io-util",
    "io-std",
] }
tokio-util = { workspace = true, features = ["compat"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
dunce = { workspace = true }
semver = { workspace = true }
xai-tty-utils = { workspace = true }
xai-grok-config = { workspace = true }
xai-grok-sandbox = { path = "../xai-grok-sandbox", default-features = false }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }

# Binary hardening: compile-time string + control-flow obfuscation.
obfstr = { workspace = true }
cryptify = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
# Default allocator on Unix; gated by the `jemalloc` feature (see main.rs
# `#[global_allocator]`, cfg(all(feature = "jemalloc", unix))).
# `stats` is binary-scoped only (not workspace-wide) so this CLI jemalloc
# link gets --enable-stats for stats.allocated / stats.resident mallctl.
tikv-jemallocator = { workspace = true, optional = true, features = ["stats"] }
# Raw mallctl for the memory-cliff arena purge hook (see
# `purge_jemalloc_retained_pages` + the `install_release_hook` call in
# main.rs). Same version family as the
# allocator; adds no new build units beyond what tikv-jemallocator pulls in.
tikv-jemalloc-sys = { workspace = true, optional = true }
# Heap-profile / stats mallctl helpers (prof.active, prof.dump, epoch, stats.*).
tikv-jemalloc-ctl = { workspace = true, optional = true, features = ["stats", "use_std"] }

[dev-dependencies]
serial_test = { workspace = true }
# `PagerArgs::try_parse_from` in the CLI-parsing unit tests (needs the
# `clap::Parser` trait in scope).
clap = { workspace = true, features = ["derive"] }

[features]
default = [
    "jemalloc",
    "sandbox-enforce",
    ]
default-bazel = [
    "jemalloc",
    "sandbox-enforce",
    ]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-sys", "dep:tikv-jemalloc-ctl"]
sandbox-enforce = ["xai-grok-pager/sandbox-enforce"]
release-dist = ["xai-grok-pager/release-dist"]
